incluindo os arquivos no index.html

--- a/Semana-01/front-end/index.html
+++ b/Semana-01/front-end/index.html
@@ -8,6 +8,12 @@
   <body>
     <h1>Començando o curso</h1>
 
+    <div class="container">
+      <div class="cont">
+        <img src="" alt="" />
+      </div>
+    </div>
+
     <img src="./" alt="imagem" />
   </body>
 </html>
