remorendo arquivos que não seram ultilizados

--- a/Semana-01/front-end/index.html
+++ b/Semana-01/front-end/index.html
@@ -5,15 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>Començando o curso</h1>
-
-    <div class="container">
-      <div class="cont">
-        <img src="" alt="" />
-      </div>
-    </div>
-
-    <img src="./" alt="imagem" />
-  </body>
+  <body></body>
 </html>
