incluindo pop-up com o modal

--- a/02-iniciando-no-front-end/pagina-de-portfolio/classes.html
+++ b/02-iniciando-no-front-end/pagina-de-portfolio/classes.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href=".//css/modal-overlay.css" />
-    <title>Pagina de Portfolio</title>
+    <link rel="stylesheet" href="./css/modal-overlay.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <title>Aulas</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   </head>
 
@@ -108,7 +112,11 @@
     </section>
 
     <div class="modal-overlay">
-      <a class="fechar" href="">X</a>
+      <div class="modal">
+        <a class="close-modal">
+          <span class="material-icons"> close</span>
+        </a>
+      </div>
     </div>
 
     <script src="../scripts/main.js"></script>
