manipulando a DOM dentro do javascript

--- a/02-iniciando-no-front-end/pagina-de-portfolio/classes.html
+++ b/02-iniciando-no-front-end/pagina-de-portfolio/classes.html
@@ -116,9 +116,18 @@
         <a class="close-modal">
           <span class="material-icons"> close</span>
         </a>
+        <div class="modal-content">
+          <!-- video aqui  -->
+          <iframe
+            src=""
+            frameborder="0"
+            allow="accelerometer; autoplay;"
+            allowfullscreen
+          ></iframe>
+        </div>
       </div>
     </div>
 
-    <script src="../scripts/main.js"></script>
+    <script src="./js/scripts.js"></script>
   </body>
 </html>
