concluido o modo do frontend

--- a/02-iniciando-no-front-end/pagina-de-portfolio/classes.html
+++ b/02-iniciando-no-front-end/pagina-de-portfolio/classes.html
@@ -25,10 +25,15 @@
       <h1>Aulas</h1>
     </div>
 
-    <section class="cards">
+    <section class="cards" id="RN_aQnrqwXw">
       <div class="card">
         <div class="card__image_containner">
-          <img src="./assets/image-converta-se.jpg" alt="" />
+          <img
+            src="https://img.youtube.com/vi/RN_aQnrqwXw/mqdefault.jpg"
+            alt=""
+            Pastor
+            Lucinho
+          />
         </div>
         <div class="card__content">
           <p>Converta-se a Alguém</p>
@@ -39,11 +44,11 @@
         </div>
       </div>
 
-      <div class="card">
+      <div class="card" id="F6-4nuNVyKU">
         <div class="card__image_containner">
           <img
-            src="./assets/image-nao-siga-essas-receitas-para-morrer.jpg"
-            alt=""
+            src="https://img.youtube.com/vi/F6-4nuNVyKU/mqdefault.jpg"
+            alt="Pastor Lucinho"
           />
         </div>
         <div class="card__content">
@@ -55,9 +60,12 @@
         </div>
       </div>
 
-      <div class="card">
+      <div class="card" id="qCGMZptCy_c">
         <div class="card__image_containner">
-          <img src="./assets/image-sacrificios-sem-valor.jpg" alt="" />
+          <img
+            src="https://img.youtube.com/vi/qCGMZptCy_c/mqdefault.jpg"
+            alt="Pastor Lucinho"
+          />
         </div>
         <div class="card__content">
           <p>Sacrifícios sem Valor</p>
@@ -68,9 +76,12 @@
         </div>
       </div>
 
-      <div class="card">
+      <div class="card" id="IrNbhyt9mVU">
         <div class="card__image_containner">
-          <img src="./assets/image-um-fracasso-nao-e-o-fim.jpg" alt="" />
+          <img
+            src="https://img.youtube.com/vi/IrNbhyt9mVU/mqdefault.jpg"
+            alt="Pastor Lucinho"
+          />
         </div>
         <div class="card__content">
           <p>Um Fracasso não é o Fim</p>
@@ -81,11 +92,11 @@
         </div>
       </div>
 
-      <div class="card">
+      <div class="card" id="vR-Mj62i0_g">
         <div class="card__image_containner">
           <img
-            src="./assets/image-tomando-decisoes-pensado-na-eternidade.jpg"
-            alt=""
+            src="https://img.youtube.com/vi/vR-Mj62i0_g/mqdefault.jpg"
+            alt="Pastor Lucinho"
           />
         </div>
         <div class="card__content">
@@ -97,12 +108,15 @@
         </div>
       </div>
 
-      <div class="card">
+      <div class="card" id="VPxO9CcWmQU">
         <div class="card__image_containner">
-          <img src="./assets/image-largando-sua-calculadora.jpg" alt="" />
+          <img
+            src="https://img.youtube.com/vi/VPxO9CcWmQU/mqdefault.jpg"
+            alt="Pastor Lucinho"
+          />
         </div>
         <div class="card__content">
-          <p>Farmulário de Animação do JS Puro</p>
+          <p>A Coisa que o Ser Humano Mais Detesta: ESPERAR!</p>
         </div>
         <div class="card_inf">
           <p>7:19min</p>
@@ -118,12 +132,7 @@
         </a>
         <div class="modal-content">
           <!-- video aqui  -->
-          <iframe
-            src=""
-            frameborder="0"
-            allow="accelerometer; autoplay;"
-            allowfullscreen
-          ></iframe>
+          <iframe src="" frameborder="0"></iframe>
         </div>
       </div>
     </div>
