--- a/02-iniciando-no-front-end/desafio-2-3/conteudos.html
+++ b/02-iniciando-no-front-end/desafio-2-3/conteudos.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/conteudos.css" />
     <title>Conteúdos</title>
   </head>
@@ -72,7 +76,7 @@
     <div class="modal-overlay">
       <div class="modal">
         <a class="close-modal">
-          <span class="material-icons">close</span>
+          <span class="material-icons"> close </span>
         </a>
         <div class="modal-content">
           <!-- video aqui  -->
