incluindo o footer na pagina

--- a/02-iniciando-no-front-end/desafio-2-3/conteudos.html
+++ b/02-iniciando-no-front-end/desafio-2-3/conteudos.html
@@ -88,6 +88,12 @@
       </div>
     </div>
 
+    <footer>
+      <div class="footer">
+        <p>Projeto jeito com muito amor</p>
+      </div>
+    </footer>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
