--- a/02-iniciando-no-front-end/desafio-2-3/conteudos.html
+++ b/02-iniciando-no-front-end/desafio-2-3/conteudos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +17,7 @@
         <a href="https://discordapp.com/invite/gCRAFhc">Comunidade</a>
         <a href="mailto:oi@rocketseat.com.br">Email</a>
         <a href="tel:+5547992078767">Telefone</a>
-        <a href="https://rocketseat.com.br">Sobre</a>
+        <a href="/index.html">Sobre</a>
         <a href="/conteudos.html">Conteúdos</a>
       </div>
     </header>
@@ -77,7 +77,9 @@
       <div class="modal">
         <a class="close-modal">
           <span class="material-icons"> close </span>
+          <span id="mix" class="material-icons"> aspect_ratio </span>
         </a>
+
         <div class="modal-content">
           <!-- video aqui  -->
           <iframe
