--- a/02-iniciando-no-front-end/desafio-2-3/index.html
+++ b/02-iniciando-no-front-end/desafio-2-3/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Desafio 2-3</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   </head>
@@ -13,7 +13,7 @@
         <a href="https://discordapp.com/invite/gCRAFhc">Comunidade</a>
         <a href="mailto:oi@rocketseat.com.br">Email</a>
         <a href="tel:+5547992078767">Telefone</a>
-        <a href="https://rocketseat.com.br">Sobre</a>
+        <a href="/index.html">Sobre</a>
         <a href="/conteudos.html">Conteúdos</a>
       </div>
     </header>
