--- a/02-iniciando-no-front-end/desafio-2-3/conteudos.html
+++ b/02-iniciando-no-front-end/desafio-2-3/conteudos.html
@@ -77,7 +77,10 @@
       <div class="modal">
         <a class="close-modal">
           <span class="material-icons"> close </span>
-          <span id="mix" class="material-icons"> aspect_ratio </span>
+        </a>
+
+        <a class="maximize-modal">
+          <i class="material-icons">open_in_full</i>
         </a>
 
         <div class="modal-content">
