concluindo o desafio 2-3, e iniciando o projeto Foodfy

--- a/02-iniciando-no-front-end/desafio-2-3/conteudos.html
+++ b/02-iniciando-no-front-end/desafio-2-3/conteudos.html
@@ -25,7 +25,10 @@
     <h1>Os 3 melhores posts do blog da Rocketseat</h1>
 
     <section class="cards">
-      <div class="card" id="qCGMZptCy_c">
+      <div
+        class="card"
+        id="/upload-de-imagens-no-front-end-com-react-js-e-context-api-3/"
+      >
         <div class="card__image_containner">
           <img
             src="https://blog.rocketseat.com.br/content/images/2020/10/blog-rocketseat-upload-de-imagens-no-front-end-com-react-js-e-context-api.png "
@@ -40,7 +43,7 @@
         </div>
       </div>
 
-      <div class="card" id="qCGMZptCy_c">
+      <div class="card" id="axios-um-cliente-http-full-stack/">
         <div class="card__image_containner">
           <img
             src="https://blog.rocketseat.com.br/content/images/2020/09/axios-um-cliente-http-full-stack-rocketseat.png "
@@ -55,7 +58,10 @@
         </div>
       </div>
 
-      <div class="card" id="qCGMZptCy_c">
+      <div
+        class="card"
+        id="react-hook-swr-melhor-ux-no-consumo-de-api-no-front-end-react/"
+      >
         <div class="card__image_containner">
           <img
             src="https://blog.rocketseat.com.br/content/images/2020/09/react-hook-swr-melhor-ux-no-consumo-de-api-no-front-end-react-capa.png "
@@ -86,7 +92,7 @@
         <div class="modal-content">
           <!-- video aqui  -->
           <iframe
-            src="https://blog.rocketseat.com.br/upload-de-imagens-no-front-end-com-react-js-e-context-api-3/"
+            src="axios-um-cliente-http-full-stack-rocketseat"
             frameborder="0"
           ></iframe>
         </div>
@@ -95,7 +101,14 @@
 
     <footer>
       <div class="footer">
-        <p>Projeto jeito com muito amor</p>
+        <p>
+          Projeto jeito com muito amor
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/johnny-jefferson1010/ "
+            >Johnny Jefferson</a
+          >
+        </p>
       </div>
     </footer>
 
